--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                     <div class="products-single fix">
                         <div class="box-img-hover">
                             <div class="type-lb">
-                                <p class="sale">Sale</p>
+                                <p class="sale">HOT🍩🍩🍩🍩</p>
                             </div>
                             <img src="images/img-pro-05.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
@@ -445,7 +445,7 @@
                     <div class="products-single fix">
                         <div class="box-img-hover">
                             <div class="type-lb">
-                                <p class="sale">Sale</p>
+                                <p class="sale">HOT🔥🔥🔥</p>
                             </div>
                             <img src="images/img-pro-08.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
@@ -468,7 +468,7 @@
                     <div class="products-single fix">
                         <div class="box-img-hover">
                             <div class="type-lb">
-                                <p class="sale">Sale</p>
+                                <p class="sale">HOT🔥🔥🔥🔥</p>
                             </div>
                             <img src="images/img-pro-06.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
@@ -491,7 +491,7 @@
                     <div class="products-single fix">
                         <div class="box-img-hover">
                             <div class="type-lb">
-                                <p class="sale">Sale</p>
+                                <p class="sale">HOT🔥🔥</p>
                             </div>
                             <img src="images/img-pro-07.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
@@ -514,7 +514,7 @@
                     <div class="products-single fix">
                         <div class="box-img-hover">
                             <div class="type-lb">
-                                <p class="sale">Sale</p>
+                                <p class="sale">HOT</p>
                             </div>
                             <img src="images/img-pro-11.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
@@ -537,7 +537,7 @@
                     <div class="products-single fix">
                         <div class="box-img-hover">
                             <div class="type-lb">
-                                <p class="sale">Sale</p>
+                                <p class="sale">HOT</p>
                             </div>
                             <img src="images/img-pro-09.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
@@ -560,7 +560,7 @@
                     <div class="products-single fix">
                         <div class="box-img-hover">
                             <div class="type-lb">
-                                <p class="sale">Sale</p>
+                                <p class="sale">HOT</p>
                             </div>
                             <img src="images/img-pro-12.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
@@ -583,7 +583,7 @@
                     <div class="products-single fix">
                         <div class="box-img-hover">
                             <div class="type-lb">
-                                <p class="sale">Sale</p>
+                                <p class="sale">HOT</p>
                             </div>
                             <img src="images/img-pro-13.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
