--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <li class="nav-item active"><a class="nav-link" href="index.html">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://thiagoseo.github.io/" target="_blank"> Sobre Nós</a></li>
                         <li class="dropdown">
-                            <!--a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">Loja</a>
+                            <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">Loja</a>
                             <ul class="dropdown-menu">
 								<li><a href="shop.html">Sidebar</a></li>
 								<li><a href="shop-detail.html">Detalhes do Item</a></li>
@@ -143,7 +143,7 @@
                                 <li><a href="checkout.html">Finalizar Compra</a></li>
                                 <li><a href="my-account.html">Minha Conta</a></li>
                                 <li><a href="wishlist.html">Lista de Compras</a></li>
-                            </ul-->
+                            </ul>
                         </li>
                         <!--li class="nav-item"><a class="nav-link" href="gallery.html">Galeria</a></li-->
                         <li class="nav-item"><a class="nav-link" href="https://wa.link/id8viu">Nos Contate</a></li>
@@ -686,7 +686,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://instagram.com/stdio.comunicacao?igshid=YmMyMTA2M2Y="><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
@@ -694,23 +694,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="ins-inner-box">
-                    <img src="images/instagram-img-01.jpg" alt="" />
-                    <div class="hov-in">
-                        <a href="#"><i class="fab fa-whatsapp"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="ins-inner-box">
-                    <img src="images/instagram-img-01.jpg" alt="" />
-                    <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://instagram.com/stdio.comunicacao?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -726,7 +710,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://instagram.com/stdio.comunicacao?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -742,7 +726,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://instagram.com/stdio.comunicacao?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -758,7 +742,23 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://instagram.com/stdio.comunicacao?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="ins-inner-box">
+                    <img src="images/instagram-img-01.jpg" alt="" />
+                    <div class="hov-in">
+                        <a href="#"><i class="fab fa-whatsapp"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="ins-inner-box">
+                    <img src="images/instagram-img-01.jpg" alt="" />
+                    <div class="hov-in">
+                        <a href="https://instagram.com/stdio.comunicacao?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -776,7 +776,7 @@
 						<div class="footer-top-box">
 							<h3>Horário Comercial</h3>
 							<ul class="list-time">
-								<li>Suporte Segunda - Sexta: 08.00am to 17.00pm</li> <li>Sábado: 10.00am to 08.00pm</li> <li>Domingo: <span>Fechado</span></li>
+								<li>Suporte Segunda - Sexta: 08.00am to 17.00pm</li> <li>Sábado: 10.00am to 20.00pm</li> <li>Domingo: <span>Fechado</span></li>
 							</ul>
 						</div>
 					</div>
@@ -803,7 +803,7 @@
                                 <li><a href="#"><i class="fab fa-google-plus" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fab fa-pinterest-p" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
+                                <li><a href="https://wa.link/id8viu"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
                             </ul>
 						</div>
 					</div>
