--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
                     <div class="col-lg-4 col-md-12 col-sm-12">
                         <div class="footer-widget">
                             <h4>Sobre Nós</h4>
-                            <a href="https://thiagoseo.github.io/">Thiago Martins</a></p>
+                            <p><a href="https://thiagoseo.github.io/">Thiago Martins</a></p>
 										
                         </div>
                     </div>
