--- a/index.html
+++ b/index.html
@@ -336,10 +336,10 @@
                             <div class="mask-icon">
                                 <ul>
                                     <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
                                 </ul>
-                                <a class="cart" href="#https://wa.link/id8viu">Comprar Agora!</a>
+                                <a class="cart" href="https://wa.link/id8viu">Comprar Agora!</a>
                             </div>
                         </div>
                         <div class="why-text">
@@ -358,11 +358,11 @@
                             <img src="images/img-pro-10.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Vitalício"><i class="far fa-heart"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Vitalício"><i class="far fa-heart"></i></a></li>
                                 </ul>
-                                <a class="cart" href="#https://wa.link/id8viu">Comprar Agora!</a>
+                                <a class="cart" href="https://wa.link/id8viu">Comprar Agora!</a>
                             </div>
                         </div>
                         <div class="why-text">
@@ -381,11 +381,11 @@
                             <img src="images/img-pro-03.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
                                 </ul>
-                                <a class="cart" href="#https://wa.link/id8viu">Comprar Agora!</a>
+                                <a class="cart" href="https://wa.link/id8viu">Comprar Agora!</a>
                             </div>
                         </div>
                         <div class="why-text">
@@ -404,11 +404,11 @@
                             <img src="images/img-pro-04.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
                                 </ul>
-                                <a class="cart" href="#https://wa.link/id8viu">Comprar Agora!</a>
+                                <a class="cart" href="https://wa.link/id8viu">Comprar Agora!</a>
                             </div>
                         </div>
                         <div class="why-text">
@@ -427,11 +427,11 @@
                             <img src="images/img-pro-05.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
                                 </ul>
-                                <a class="cart" href="#https://wa.link/id8viu">Comprar Agora!</a>
+                                <a class="cart" href="https://wa.link/id8viu">Comprar Agora!</a>
                             </div>
                         </div>
                         <div class="why-text">
@@ -450,11 +450,11 @@
                             <img src="images/img-pro-08.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
                                 </ul>
-                                <a class="cart" href="#https://wa.link/id8viu">Comprar Agora!</a>
+                                <a class="cart" href="https://wa.link/id8viu">Comprar Agora!</a>
                             </div>
                         </div>
                         <div class="why-text">
@@ -473,11 +473,11 @@
                             <img src="images/img-pro-06.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
                                 </ul>
-                                <a class="cart" href="#https://wa.link/id8viu">Comprar Agora!</a>
+                                <a class="cart" href="https://wa.link/id8viu">Comprar Agora!</a>
                             </div>
                         </div>
                         <div class="why-text">
@@ -496,11 +496,11 @@
                             <img src="images/img-pro-07.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
                                     <li><a href="https://wa.link/id8viu#" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
                                 </ul>
-                                <a class="cart" href="#https://wa.link/id8viu">Comprar Agora!</a>
+                                <a class="cart" href="https://wa.link/id8viu">Comprar Agora!</a>
                             </div>
                         </div>
                         <div class="why-text">
@@ -519,11 +519,11 @@
                             <img src="images/img-pro-11.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
                                 </ul>
-                                <a class="cart" href="#https://wa.link/id8viu">Comprar Agora!</a>
+                                <a class="cart" href="https://wa.link/id8viu">Comprar Agora!</a>
                             </div>
                         </div>
                         <div class="why-text">
@@ -542,11 +542,11 @@
                             <img src="images/img-pro-09.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
                                 </ul>
-                                <a class="cart" href="#https://wa.link/id8viu">Comprar Agora!</a>
+                                <a class="cart" href="https://wa.link/id8viu">Comprar Agora!</a>
                             </div>
                         </div>
                         <div class="why-text">
@@ -565,11 +565,11 @@
                             <img src="images/img-pro-12.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
                                 </ul>
-                                <a class="cart" href="#https://wa.link/id8viu">Comprar Agora!</a>
+                                <a class="cart" href="https://wa.link/id8viu">Comprar Agora!</a>
                             </div>
                         </div>
                         <div class="why-text">
@@ -588,11 +588,11 @@
                             <img src="images/img-pro-13.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
-                                    <li><a href="#https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Review"><i class="fas fa-eye"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Se baseie neste modelo"><i class="fas fa-sync-alt"></i></a></li>
+                                    <li><a href="https://wa.link/id8viu" data-toggle="tooltip" data-placement="right" title="Adicionar a lista"><i class="far fa-heart"></i></a></li>
                                 </ul>
-                                <a class="cart" href="#">Comprar Agora!</a>
+                                <a class="cart" href="https://wa.link/id8viu">Comprar Agora!</a>
                             </div>
                         </div>
                         <div class="why-text">
