--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="description" content="Empresas de software em sorocaba">
     <meta name="description" content="Thiago Martins desenvolvedor">
     <meta property="og:description" content="Serviços sobre as tecnologias da Web aberta, incluindo serviços e produtos.">
-    <meta property="og:title" content="Software em Sorocaba">
+    <meta property="og:title" content="Site Vitalício">
     <meta property="og:type" content="Serviços sobre as tecnologias de desenvolvimento de sistemas, incluindo serviços e produtos.">
     <meta property="og:image" content="https://raw.githubusercontent.com/ThiagoSEO/Index/main/Picsart_23-05-01_06-33-16-683.png">
     <meta property="og:site_name" content="Stdio Comunicação">
@@ -432,7 +432,7 @@
                     <div class="products-single fix">
                         <div class="box-img-hover">
                             <div class="type-lb">
-                                <p class="sale">HOT🍩🍩🍩🍩</p>
+                                <p class="sale">HOT🍕🍕🍕🍕</p>
                             </div>
                             <img src="images/img-pro-05.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
@@ -712,7 +712,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#https://wa.link/id8viu"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://wa.link/id8viu"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
@@ -728,7 +728,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://wa.link/id8viu"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
@@ -744,7 +744,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://wa.link/id8viu"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
@@ -760,7 +760,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="#"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://instagram.com/stdio.comunicacao?igshid=YmMyMTA2M2Y="><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
