--- a/index.html
+++ b/index.html
@@ -261,11 +261,11 @@
                 </div>
             </li>
         </ul>
-        <div class="slides-navigation">
+        <!--div class="slides-navigation">
             <a href="#" class="next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
             <a href="#" class="prev"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
         </div>
-    </div>
+    </div-->
     <!-- End Slider -->
 
     <!-- Start Categories  -->
@@ -295,7 +295,7 @@
     </div>
     < End Categories -->
 	
-	<div class="box-add-products">
+	<!--div class="box-add-products">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-12">
@@ -310,7 +310,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div-->
 
     <!-- Start Products  -->
     <div class="products-box">
