--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Bem Vindo ao <br> Shopping de Sites </strong></h1>
                             <p class="m-b-40">Sites já hospedados com leads <br> Fonte de insights até 10 Mil Leads no seu site, agora mesmo</p>
-                            <p><a class="btn hvr-hover" href="/criando">Veja Agora Mesmo</a></p>
+                            <p><a class="btn hvr-hover" href="https://wa.link/id8viu">Veja Agora Mesmo</a></p>
                         </div>
                     </div>
                 </div>
