--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Bem Vindo ao <br> Shopping de Sites </strong></h1>
                             <p class="m-b-40">Servidores compactos para hospedar seu domínio <br> Gabaritamos seu ganho com a produção via internet</p>
-                            <p><a class="btn hvr-hover" href="#">Veja Agora Mesmo</a></p>
+                            <p><a class="btn hvr-hover" href="https://wa.link/id8viu">Veja Agora Mesmo</a></p>
                         </div>
                     </div>
                 </div>
@@ -255,7 +255,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Bem Vindo ao <br> Shopping de Sites </strong></h1>
                             <p class="m-b-40">Sites com Conversões aprovadas pelos nossos clientes <br> Veja a baixo nossa diversificação de sites</p>
-                            <p><a class="btn hvr-hover" href="#">Veja Agora Mesmo</a></p>
+                            <p><a class="btn hvr-hover" href="https://wa.link/id8viu">Veja Agora Mesmo</a></p>
                         </div>
                     </div>
                 </div>
@@ -264,8 +264,8 @@
         <!--div class="slides-navigation">
             <a href="#" class="next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
             <a href="#" class="prev"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
-        </div>
-    </div-->
+        </div-->
+    </div>
     <!-- End Slider -->
 
     <!-- Start Categories  -->
