--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="https://instagram.com/stdio.comunicacao?igshid=YmMyMTA2M2Y="><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://instagram.com/stdio.desenvolvinento?igshid=MzNlNGNkZWQ4Mg=="><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
@@ -704,23 +704,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="https://instagram.com/stdio.comunicacao?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="ins-inner-box">
-                    <img src="images/instagram-img-01.jpg" alt="" />
-                    <div class="hov-in">
-                        <a href="https://wa.link/id8viu"><i class="fab fa-whatsapp"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="ins-inner-box">
-                    <img src="images/instagram-img-01.jpg" alt="" />
-                    <div class="hov-in">
-                        <a href="https://instagram.com/stdio.comunicacao?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
+                        <a href="https://instagram.com/stdio.desenvolvinento?igshid=MzNlNGNkZWQ4Mg=="><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -736,7 +720,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="https://instagram.com/stdio.comunicacao?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
+                        <a href="https://instagram.com/stdio.desenvolvinento?igshid=MzNlNGNkZWQ4Mg=="><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -752,7 +736,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="https://instagram.com/stdio.comunicacao?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
+                        <a href="https://instagram.com/stdio.desenvolvinento?igshid=MzNlNGNkZWQ4Mg=="><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -760,7 +744,7 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="https://instagram.com/stdio.comunicacao?igshid=YmMyMTA2M2Y="><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://instagram.com/stdio.desenvolvinento?igshid=MzNlNGNkZWQ4Mg=="><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
@@ -768,7 +752,23 @@
                 <div class="ins-inner-box">
                     <img src="images/instagram-img-01.jpg" alt="" />
                     <div class="hov-in">
-                        <a href="https://instagram.com/stdio.comunicacao?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
+                        <a href="https://instagram.com/stdio.desenvolvinento?igshid=MzNlNGNkZWQ4Mg=="><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="ins-inner-box">
+                    <img src="images/instagram-img-01.jpg" alt="" />
+                    <div class="hov-in">
+                        <a href="https://instagram.com/stdio.desenvolvinento?igshid=MzNlNGNkZWQ4Mg=="><i class="fab fa-whatsapp"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="ins-inner-box">
+                    <img src="images/instagram-img-01.jpg" alt="" />
+                    <div class="hov-in">
+                        <a href="https://instagram.com/stdio.desenvolvinento?igshid=MzNlNGNkZWQ4Mg=="><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -823,7 +823,7 @@
                     <div class="col-lg-4 col-md-12 col-sm-12">
                         <div class="footer-widget">
                             <h4>Sobre Nós</h4>
-                            <p><a href="https://thiagoseo.github.io/">Thiago Martins</a></p>
+                            <<a href="https://thiagoseo.github.io/">Thiago Martins</a>
 										
                         </div>
                     </div>
@@ -864,7 +864,7 @@
 
     <!-- Start copyright  -->
     <div class="footer-copyright">
-        <p class="footer-company">Todos Direitos Reservados. &copy; 2023 <a href="#">Stdio Comunicação</a> Design By :
+        <p class="footer-company">Todos Direitos Reservados. &copy; 2023 <a href="https://wa.link/id8viu">Stdio Comunicação</a> Design By :
             <a href="https://thiagoseo.github.io/">Thiago Martins</a></p>
     </div>
     <!-- End copyright  -->
