--- a/index.html
+++ b/index.html
@@ -821,11 +821,11 @@
 				<hr>
                 <div class="row">
                     <div class="col-lg-4 col-md-12 col-sm-12">
-                        <div class="footer-widget">
+                        <!--div class="footer-widget">
                             <h4>Sobre Nós</h4>
-                            <<a href="https://thiagoseo.github.io/">Thiago Martins</a>
+                            <a href="https://thiagoseo.github.io/">Thiago Martins</a>
 										
-                        </div>
+                        </div-->
                     </div>
                     <!--div class="col-lg-4 col-md-12 col-sm-12">
                         <div class="footer-widget">
