--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <!-- Basic -->
 
 <head>
@@ -16,13 +16,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Empresas de software em sorocaba">
-    <meta name="description" content="Thiago Martins desenvolvedor">
+    <meta name="description" content="Thiago Martins Desenvolvedor">
     <meta property="og:description" content="Serviços sobre as tecnologias da Web aberta, incluindo serviços e produtos.">
     <meta property="og:title" content="Site Vitalício">
     <meta property="og:type" content="Serviços sobre as tecnologias de desenvolvimento de sistemas, incluindo serviços e produtos.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/ThiagoSEO/Index/main/Picsart_23-05-01_06-33-16-683.png">
+    <meta property="og:image" content="images/instagram-img-01.jpg">
     <meta property="og:site_name" content="Stdio Comunicação">
-    <meta name="googlebot" content="Desenvolviemento de software em Sorocaba" />
+    <meta name="googlebot" content="Desenvolvimento de sites em Sorocaba" />
+.   <meta name="googlebot" content="Comprar sites em Sorocaba" />
+.   <meta name="googlebot" content="Criar site" />
     <meta name="googlebot" content="STDIO SOROCABA" />
     <meta name="twitter:card" content="Serviços sobre as tecnologias da Web aberta, incluindo serviços e produtos.">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/ThiagoStdio/ThiagoStdio/master/assets/catsa2.png">
@@ -76,7 +78,7 @@
                     </div>
                     <div class="our-link">
                         <ul>
-                            <!--li><a href="#"><i class="fa fa-user s_color"></i> Minha Conta</a></li-->
+                            <!--li><a href="https://github.com/login"><i class="fa fa-user s_color"></i> Minha Conta</a></li-->
                             <!--li><a href="#"><i class="fas fa-location-arrow"></i> Nossa Localização</a></li-->
                             <li><a href="https://wa.link/id8viu"><i class="fas fa-headset"></i> Contato</a></li>
                         </ul>
@@ -269,7 +271,7 @@
     <!-- End Slider -->
 
     <!-- Start Categories  -->
-    <!--div class="categories-shop">
+    <div class="categories-shop">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -293,7 +295,7 @@
             </div>
         </div>
     </div>
-    < End Categories -->
+    < End Categories >
 	
 	<!--div class="box-add-products">
 		<div class="container">
@@ -318,7 +320,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="title-all text-center">
-                        <h1>Sites Criados em 24 horas 🚀</h1>
+                        <h1>Crie um Site e prepare a sua empresa para vender mais! 🚀</h1>
                         <p>Escolha seu tema, adquira-o de graça em sua versão demo ou compre agora mesmo pela metade do preço</p>
                     </div>
                 </div>
@@ -354,7 +356,7 @@
                         </div>
                         <div class="why-text">
                             <h4> Site com Funil de Vendas</h4>
-                            <h5> R$ 199,00</h5>
+                            <h5> R$ 299,00</h5>
                         </div>
                     </div>
                 </div>
@@ -377,7 +379,7 @@
                         </div>
                         <div class="why-text">
                             <h4>Site para Academia</h4>
-                            <h5> R$ 199,00</h5>
+                            <h5> R$ 299,00</h5>
                         </div>
                     </div>
                 </div>
@@ -400,7 +402,7 @@
                         </div>
                         <div class="why-text">
                             <h4>Portal Educacional</h4>
-                            <h5> R$ 199,00</h5>
+                            <h5> R$ 299,00</h5>
                         </div>
                     </div>
                 </div>
@@ -423,7 +425,7 @@
                         </div>
                         <div class="why-text">
                             <h4> WebSites Para Áudio/Vídeo Prod.</h4>
-                            <h5> R$ 199,00 </h5>
+                            <h5> R$ 299,00 </h5>
                         </div>
                     </div>
                 </div>
@@ -432,7 +434,7 @@
                     <div class="products-single fix">
                         <div class="box-img-hover">
                             <div class="type-lb">
-                                <p class="sale">HOT🍕🍕🍕🍕</p>
+                                <p class="sale">HOT🍔🍔🍔🍔</p>
                             </div>
                             <img src="images/img-pro-05.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
@@ -446,7 +448,7 @@
                         </div>
                         <div class="why-text">
                             <h4> Site para Restaurantes</h4>
-                            <h5> R$ 199,00 </h5>
+                            <h5> R$ 299,00 </h5>
                         </div>
                     </div>
                 </div>
@@ -469,7 +471,7 @@
                         </div>
                         <div class="why-text">
                             <h4> Site para Lançamentos</h4>
-                            <h5> R$ 199,00 </h5>
+                            <h5> R$ 299,00 </h5>
                         </div>
                     </div>
                 </div>
@@ -492,7 +494,7 @@
                         </div>
                         <div class="why-text">
                             <h4> Site para Corretores de Imóveis</h4>
-                            <h5> R$ 199,00 </h5>
+                            <h5> R$ 299,00 </h5>
                         </div>
                     </div>
                 </div>
@@ -561,7 +563,7 @@
                         </div>
                         <div class="why-text">
                             <h4> Site para Executivos</h4>
-                            <h5> R$ 199,00 </h5>
+                            <h5> R$ 399,00 </h5>
                         </div>
                     </div>
                 </div>
@@ -584,7 +586,7 @@
                         </div>
                         <div class="why-text">
                             <h4> Site para Manchetes</h4>
-                            <h5> R$ 199,00 </h5>
+                            <h5> R$ 1.870,00 </h5>
                         </div>
                     </div>
                 </div>
@@ -607,7 +609,7 @@
                         </div>
                         <div class="why-text">
                             <h4> Site para Lojas Virtuais</h4>
-                            <h5> R$ 199,00 </h5>
+                            <h5> R$ 500,00 </h5>
                         </div>
                     </div>
                 </div>
@@ -792,7 +794,7 @@
 					</div>
 					<div class="col-lg-4 col-md-12 col-sm-12">
 						<div class="footer-top-box">
-							<h3>Receba cupons no email</h3>
+							<h3>Receba cupons no seu email</h3>
 							<form class="newsletter-box">
 								<div class="form-group">
 									<input class="" type="email" name="Email" placeholder="Email Address*" />
@@ -807,12 +809,12 @@
 							<h3>Midias Expressivas</h3>
 							<p>Nós atualizamos nossas mídias com conteúdo para desenvolvedores</p>
 							<ul>
-                                <!--li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.facebook.com/departamento.stdio?mibextid=ZbWKwL"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
+                                <!--li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fab fa-google-plus" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-pinterest-p" aria-hidden="true"></i></a></li-->
+                                <li><a href="#"><i class="fab fa-pinterest-p" aria-hidden="true"></i></a></li --->
                                 <li><a href="https://wa.link/id8viu"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
                             </ul>
 						</div>
@@ -864,7 +866,7 @@
 
     <!-- Start copyright  -->
     <div class="footer-copyright">
-        <p class="footer-company">Todos Direitos Reservados. &copy; 2023 <a href="https://wa.link/id8viu">Stdio Comunicação</a> Design By :
+        <p class="footer-company">Todos Direitos Reservados. &copy; 2023 <a href="https://wa.link/id8viu">Stdio Inovando Sorocaba</a> Design By :
             <a href="https://thiagoseo.github.io/">Thiago Martins</a></p>
     </div>
     <!-- End copyright  -->
