--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Empresas de software em sorocaba">
     <meta name="description" content="Thiago Martins Desenvolvedor">
-    <meta property="og:description" content="Serviços sobre as tecnologias da Web aberta, incluindo serviços e produtos.">
+    <meta property="og:description" content="Crie um Site e prepare a sua empresa para vender mais! 🚀">
     <meta property="og:title" content="Site Vitalício">
     <meta property="og:type" content="Serviços sobre as tecnologias de desenvolvimento de sistemas, incluindo serviços e produtos.">
     <meta property="og:image" content="images/instagram-img-01.jpg">
