--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:description" content="Crie um Site e prepare a sua empresa para vender mais! 🚀">
     <meta property="og:title" content="Site Vitalício">
     <meta property="og:type" content="Serviços sobre as tecnologias de desenvolvimento de sistemas, incluindo serviços e produtos.">
-    <meta property="og:image" content="images/instagram-img-01.jpg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/shoppingdosite/shoppingdosite.github.io/main/images/instagram-img-01.jpg">
     <meta property="og:site_name" content="Stdio Comunicação">
     <meta name="googlebot" content="Desenvolvimento de sites em Sorocaba" />
 .   <meta name="googlebot" content="Comprar sites em Sorocaba" />
