--- a/index.html
+++ b/index.html
@@ -810,11 +810,11 @@
 							<p>Nós atualizamos nossas mídias com conteúdo para desenvolvedores</p>
 							<ul>
                                 <li><a href="https://www.facebook.com/departamento.stdio?mibextid=ZbWKwL"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-                                <!--li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-google-plus" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fab fa-pinterest-p" aria-hidden="true"></i></a></li --->
+                                <li><a href="https://wa.link/id8viu"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                                <li><a href="https://wa.link/id8viu"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+                                <li><a href="https://wa.link/id8viu"><i class="fab fa-google-plus" aria-hidden="true"></i></a></li>
+                                <li><a href="https://wa.link/id8viu"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
+                                <li><a href="https://wa.link/id8viu"><i class="fab fa-pinterest-p" aria-hidden="true"></i></a></li >
                                 <li><a href="https://wa.link/id8viu"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
                             </ul>
 						</div>
