--- a/index.html
+++ b/index.html
@@ -835,11 +835,11 @@
                             <h4>Informações</h4>
                             
                                 <p><a href="https://wa.link/id8viu">Sobre Mim</a></p>
-                                <li><a href="#">Serviço Customizado</a></li>
-                                <li><a href="#">Nosso SiteMap</a></li>
-                                <li><a href="#">Termos &amp; Condições</a></li>
-                                <li><a href="#">Política de Privacidade</a></li>
-                                <li><a href="#">Informações de Conteúdo</a></li>
+                                <!--li><a href="#">Serviço Customizado</a></li--->
+                                <li><a href="/archs/sitemap.html">Nosso SiteMap</a></li>
+                                <li><a href="/archs/scheme.html">Termos &amp; Condições</a></li>
+                                <li><a href="/archs/pol.html">Política de Privacidade</a></li>
+                                <li><a href="/archs/grid.html">Informações de Conteúdo</a></li>
                             
                         </div>
                     </div>
