--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     </div>
     <!-- End Slider -->
 
-    <!-- Start Categories  -->
+    <!-- Start Categories  >
     <div class="categories-shop">
         <div class="container">
             <div class="row">
@@ -296,9 +296,9 @@
             </div>
         </div>
     </div>
-    < End Categories >
+    
 	
-	<!--div class="box-add-products">
+	<div class="box-add-products">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-12">
@@ -518,7 +518,7 @@
                         </div>
                         <div class="why-text">
                             <h4> Site para Imobiliárias</h4>
-                            <h5> R$ 199,00 </h5>
+                            <h5> R$ 299,00 </h5>
                         </div>
                     </div>
                 </div>
@@ -541,7 +541,7 @@
                         </div>
                         <div class="why-text">
                             <h4> Site para Clinícas</h4>
-                            <h5> R$ 199,00 </h5>
+                            <h5> R$ 299,00 </h5>
                         </div>
                     </div>
                 </div>
@@ -564,7 +564,7 @@
                         </div>
                         <div class="why-text">
                             <h4> Site para Executivos</h4>
-                            <h5> R$ 399,00 </h5>
+                            <h5> R$ 299,00 </h5>
                         </div>
                     </div>
                 </div>
@@ -587,7 +587,7 @@
                         </div>
                         <div class="why-text">
                             <h4> Site para Manchetes</h4>
-                            <h5> R$ 1.870,00 </h5>
+                            <h5> R$ 299,00 </h5>
                         </div>
                     </div>
                 </div>
@@ -609,8 +609,8 @@
                             </div>
                         </div>
                         <div class="why-text">
-                            <h4> Site para Lojas Virtuais</h4>
-                            <h5> R$ 500,00 </h5>
+                            <h4> Site para Lojas Dropshipping Virtuais</h4>
+                            <h5> R$ 2990,00 </h5>
                         </div>
                     </div>
                 </div>
@@ -831,7 +831,7 @@
                         </div-->
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12">
-                        <div class="footer-widget">
+                        <div class="footer-link-contact">
                             <h4>Informações</h4>
                             
                                 <p><a href="https://wa.link/id8viu">Sobre Mim</a></p>
