--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html class="no-js" lang="pt">
     <head>
         <meta charset="utf-8">
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     
         <!-- Site Metas -->
-        <title>Shopping do Sites 👋 </title>
+        <title>Shopping de Sites 👋 </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta http-equiv="Content-Language" content="pt-br, en, fr, it">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -180,7 +180,7 @@
                                    
                                 </ul>
                                 <div class="features_buttom">
-                                    <a href="" class="btn btn-default">Ver Mais</a>
+                                    <a href="https://wa.link/id8viu" class="btn btn-default">Ver Mais</a>
                                 </div>
                             </div>
                         </div>
@@ -315,7 +315,7 @@
             <div class="head_title text-center">
                 <h2>Satisfação ou seu dinheiro de volta</h2>
                 <div class="features_buttom">
-                    <img src="assets/images/ps2.jpg" alt="" />
+                    <img src="" alt="" />
                     <img src="assets/images/ver1.jpg" alt="" />
                     <img src="assets/images/ver3.jpg" alt="" />
                     <img src="assets/images/ver4.jpg" alt="" />
@@ -560,7 +560,7 @@
                             <div class="community-edition">
                                 <i class="fa fa-coffee"></i>
                                 <div class="separator"></div>
-                                <h4>Relatórios Profissionais</h4>
+                                <h4>Relatórios</h4>
                                 <p></p>
                             </div>
                         </div>
@@ -569,7 +569,7 @@
                             <div class="community-edition">
                                 <i class="fa fa-tree"></i>
                                 <div class="separator"></div>
-                                <h4>Raizes</h4>
+                                <h4>Foco</h4>
                                 <p></p>
                             </div>
                         </div>
@@ -587,7 +587,7 @@
                             <div class="community-edition">
                                 <i class="fa fa-folder-open"></i>
                                 <div class="separator"></div>
-                                <h4>Tema</h4>
+                                <h4>Temas</h4>
                                 <p></p>
                             </div>
                         </div>
@@ -677,7 +677,7 @@
 
                             <div class="col-md-4 col-sm-6 col-xs-12">
                                 <div class="menu-item">
-                                    <h5>Política</h5>
+                                    <h5>Políticas</h5>
                                     <ul>
                                         <a href="#"><li>TERMOS DE USO</a></li>
                                         <a href="#"><li>AVISO LEGAL</a></li>
