--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
                 <div class="row">
                     <div class="social-wrapper">
                         <div class="col-md-6">
-                            <div class="social-icon">
+                            <!--div class="social-icon">
                                 <a href="https://www.facebook.com/departamento.stdio?mibextid=ZbWKwL"><i class="fa fa-facebook"></i></a>
                                 <a href="https://wa.link/id8viu"><i class="fa fa-whatsapp"></i></a>
                                 <a href="https://instagram.com/stdio.desenvolvinento?igshid=MzNlNGNkZWQ4Mg=="><i class="fa fa-instagram"></i></a>
                                 <a href="https://github.com/shoppingdosite"><i class="fa fa-github"></i></a>
-                            </div>
+                            </div-->
                         </div>
                         <div class="col-md-6">
                             <div class="social-contact">
