--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
 		
 		
 		<div class="scrollup">
-			<a href="#"><i class="fa fa-whatsapp"></i></a>
+			<a href="https://wa.link/id8viu"><i class="fa fa-whatsapp"></i></a>
 		</div>
 
 
