--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                         <div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
                                             <div class="home-contact">
                                                 <div class="input-group">
-                                                    <input type="text" class="form-control" placeholder="COLOQUE SEU EMAIL PARA ENTRAR EM CONTATO">
+                                                    <input type="text" class="form-control" placeholder="SEU MELHOR EMAIL">
                                                     <input type="submit" class="form-control" value="ENCAMINHAR">
 
                                                 </div> <!---/ input-group --->
@@ -250,7 +250,7 @@
                                     </div>
                                     <div class="single_service_right">
                                         <h2>Chekout Transparente</h2>
-                                        <p>Encaminhe emails automático lembrando seu cliente do carrinho</p>
+                                        <p>Encaminhe emails automáticoS lembrando seu cliente do carrinho</p>
                                     </div>
                                 </div>
                             </div>
