--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="#home">Início</a></li>
-                        <li><a href="#features">Produtos</a></li>
-                        <li><a href="#service">Serviços</a></li>
+                        <li><a href="https://wa.link/id8viu">Saiba Mais</a></li>
+                        <!--li><a href="#service">Serviços</a></li>
                         <li><a href="#price">Comentários</a></li>
                         <li><a href="#business">Conteúdo</a></li>
-                        <li><a href="#contact">Contato</a></li>
+                        <li><a href="#contact">Contato</a></li-->
                         <li class="login"><a href="https://github.com/topics/login">Login</a></li>
                     </ul>
 
@@ -124,8 +124,9 @@
                             <div class="col-md-10 col-md-offset-1">
                                 <div class="home-content">
 
-                                    <h1>Bem Vindo</h1>
-                                    <p>ao Shopping de Sites</p>
+                                    <h1>SHOPPING DE SITES 🚀🚀🚀</h1>
+                                    
+                                    <h2></H2>
 
                                     <div class="row">
                                         <div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
@@ -733,7 +734,7 @@
 
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <div class="copyright">
-                                <p>Criado <i class="fa fa-heart"></i> por <a target="_blank" href="https://thiagostdio.github.io/Index/"> Thiago Martins </a>2023. All rights reserved Stdio Desenvolvimento.</p>
+                                <p>Criado <i class="fa fa-heart"></i> por <a  href="https://wa.link/id8viu"> Thiago Martins </a>2023. All rights reserved Stdio Desenvolvimento.</p>
 
                             </div>
                         </div>
@@ -745,7 +746,7 @@
 		
 		
 		<div class="scrollup">
-			<a href="https://wa.link/id8viu"><i class="fa fa-whatsapp">.</i></a>
+			<a href="https://wa.link/id8viu"><i class="fa fa-coffee">.</i></a>
 		</div>
 
 
