--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                    
                                 </ul>
                                 <div class="features_buttom">
-                                    <a href="https://wa.link/id8viu" class="btn btn-default">Ver Mais</a>
+                                    <a href="https://wa.link/id8viu" class="btn btn-default"><h5>VER MAIS</h5></a>
                                 </div>
                             </div>
                         </div>
@@ -214,7 +214,7 @@
                                     <p>  ✅ Site Multilíngue</p>
                                 </ul>
                                 <div class="features_buttom">
-                                    <a href="https://wa.link/id8viu" class="btn btn-default">Ver Mais</a>
+                                    <a href="https://wa.link/id8viu" class="btn btn-default"><h5>VER MAIS</h5></a>
                                 </div>
                             </div>
                         </div>
@@ -326,7 +326,7 @@
                 <div class="cd-pricing-switcher">
                     <p class="fieldset">
                         <input type="radio" name="duration-2" value="monthly" id="monthly-2" checked>
-                        <label for="monthly-2">Business</label>
+                        <label for="monthly-2">Empresarial</label>
                         <input type="radio" name="duration-2" value="yearly" id="yearly-2">
                         <label for="yearly-2">Community</label>
                         <span class="cd-switch"></span>
@@ -338,7 +338,7 @@
                         <ul class="cd-pricing-wrapper">
                             <li data-type="monthly" class="is-visible">
                                 <header class="cd-pricing-header">
-                                    <h2>Basic</h2>
+                                    <h2>Básico</h2>
 
                                     <div class="cd-price">
                                         <span class="cd-currency">R$</span>
@@ -364,7 +364,7 @@
 
                             <li data-type="yearly" class="is-hidden">
                                 <header class="cd-pricing-header">
-                                    <h2>Basico</h2>
+                                    <h2>Básico</h2>
 
                                     <div class="cd-price">
                                         <span class="cd-currency">R$</span>
